# fermat

./: Cargo.toml  README.md
src/: button_grid.rs  evaluator.rs  lib.rs  main.rs
src/tests/: evaluator_tests.rs
