[package]
name = "fermat"
version = "0.1.1"
edition = "2024"
description = "A terminal-based calculator with a TUI interface"
license = "MIT"
repository = "https://github.com/rakki194/fermat"
homepage = "https://github.com/rakki194/fermat"
documentation = "https://docs.rs/fermat"
keywords = ["calculator", "tui", "terminal", "math", "decimal"]
categories = ["command-line-utilities", "mathematics", "science"]

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
nom = "8.0.0"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
